# DayList

./: .gitignore  App.c  App.h  CMakeLists.txt  appointment.c  appointment.h  calendarEvent.c  calendarEvent.h  commands.c  commands.h  contact.c  contact.h  contactCalendar.c  contactCalendar.h  dateTime.c  dateTime.h  highRand.c  highRand.h  levelsList.c  levelsList.h  main.c  readme.md  stringCopy.h  stringUtil.c  stringUtil.h  timer.c
part1-2/: levelsList.c  levelsList.h  timer.c
